--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -25,7 +25,7 @@ html, body {
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Prevent image repetition */
     background-attachment: fixed; /* Fix the image during scroll */
-    opacity: 0.3; /* Adjust opacity for transparency */
+    opacity: 0.7; /* Adjust opacity for transparency */
     background-color: hsla(170, 99%, 33%);
     z-index: 0; /* Place behind the header content */
   }
@@ -57,7 +57,7 @@ table {
     width: 50%;
     color: rgb(250, 247, 247); /* black text color */
     font-family: Papyrus;
-    font-size: 1.2em;
+    font-size: 1em;
   }
 
   th, td {
@@ -66,7 +66,7 @@ table {
   }
 
 caption {
-    font-size: 1.2em;
+    font-size: 1em;
     margin: 10px;
     font-weight: bold;
     color: white;
@@ -89,17 +89,19 @@ caption {
     position: relative;
     text-decoration: underline ;
     color: white;
-    font-size: 2em;
+    font-size: 1.5em;
     font-family: Papyrus;
   }
 
 p {
-  position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     text-shadow: #ffffff 5px 4 4px; /* Subtle shadow for better readability */
     background-color: hsla(170, 99%, 33%);
     height: 40px;
     color: white;
-    font-size: 1.2em;
+    font-size: 1em;
     font-family: Papyrus;
     padding: 20px;
 }
@@ -107,14 +109,14 @@ p {
  #list-image {
     display: flex;
     justify-content: flex-end;
-    position: relative;
+    align-items: center;
     right: 0;
     z-index: 3;
   }
 
   #side-image {
     width: 350px;
-    position: relative;
+    
     right: 0;
     z-index: 3;
   }
@@ -122,43 +124,44 @@ p {
   #project-list {
     background-color: hsla(170, 99%, 33%, 1.0);
     width: 80%;
-    height: 150px;
+    height: 160px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: left;
     flex-direction: column;
-    list-style-type: square;
     font-family: Papyrus;
     font-size: 1em;
     color: white;
-    float: left;
-    gap: 1px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    gap: 10px;
     z-index: 2;
   }
 
 h4 {
-    font-size: 1.5em;
+    font-size: 1.2em;
     font-family: Papyrus;
     color: rgb(255, 0, 0);
   }
 
   form {
     position: relative;
-    margin-top: 20px;
-    background-color: hsla(170, 99%, 33%, 0.7); /* Semi-transparent background */
-    padding: 10px;
-    border: 10px;
-    border-radius: 4px;
+    margin-top: 5px;
+    background-color: hsla(170, 99%, 33%, 0.8); /* Semi-transparent background */
+    padding: 5px;
+    border: 5px;
+    border-radius: 2px;
     height: auto;
-    width: 500px;
+    width: 360px;
     margin: 0 auto; /* Center the form */
     color: black; /* black text color */
-    font-size: 1em;
+    font-size: .7em;
   }
 
   fieldset {
-    border: 3px solid black;
-    padding: 2px;
-    margin-bottom: 4px;
+    border: 2px solid black;
+    padding: 1px;
+    margin-bottom: 1px;
     align-content: center;
   }
 
@@ -170,7 +173,7 @@ h4 {
 
   label {
     display: block;
-    margin-bottom: 3px;
+    margin-bottom: 2px;
     font-weight: bold;
     color: rgb(255, 0, 0);
   }
@@ -181,7 +184,7 @@ h4 {
     
     width: 100%;
     padding: 2px;
-    margin-bottom: 3px;
+    margin-bottom: 2px;
     border: 1px solid #ccc;
     border-radius: 1px;
     box-sizing: border-box;
@@ -191,8 +194,8 @@ h4 {
     
     background-color: rgb(255, 0, 0);
     color: white;
-    padding: 10px 15px;
+    padding: 5px 5px;
     border: none;
-    border-radius: 4px;
+    border-radius: 2px;
     cursor: crosshair;
   }
