--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -240,7 +240,7 @@ h4 {
 
     h4 {
       font-size: 0.8em;
-      margin-bottom: 0.3em;
+      margin-bottom: 0.2rem;
   }
 
     .circle-image {
@@ -258,7 +258,7 @@ h4 {
       justify-content: flex-start;
       width: auto;
       height: 50%;
-      margin-top: 0.3em;
+      margin-top: 0.2rem;
     }
 
     #side-image {
@@ -278,7 +278,7 @@ h4 {
     }
 
     p {
-   
+    font-family: 'Papyrus', 'Cursive', sans-serif;
     align-items: center;
     height: 10rem;
     font-size: 1rem;
@@ -308,7 +308,7 @@ h4 {
 
     h4 {
       font-size: 0.8em;
-      margin-bottom: 0.3em;
+      margin-bottom: 0.2rem;
     }
 
     .circle-image {
@@ -326,7 +326,7 @@ h4 {
       justify-content: flex-start;
       width: auto;
       height: 50%;
-      margin-top: 0.3em;
+      margin-top: 0.2rem;
     }
 
     #side-image {
@@ -354,7 +354,7 @@ h4 {
     height: 8rem;
     color: white;
     font-size: 1rem;
-    font-family: Papyrus;
+    font-family: 'Papyrus', 'Cursive', sans-serif;
     padding: 2rem;
 }
   }
@@ -421,7 +421,7 @@ h4 {
     height: 4rem;
     color: white;
     font-size: 1rem;
-    font-family: Papyrus;
+    font-family: 'Papyrus', 'Cursive', sans-serif;
     padding: 2rem;
 }
   }
