--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -231,15 +231,15 @@ h4 {
    }
 
     h1 {
-      font-size: 2.5em;
+      font-size: 3em;
     }
 
     h2 {
-      font-size: 1em;
+      font-size: 2.2em;
     }
 
     h4 {
-      font-size: 0.8em;
+      font-size: 1.2em;
       margin-bottom: 0;
       line-height: 1.1;
   }
@@ -251,7 +251,7 @@ h4 {
 
     table {
       width: 50%;
-      font-size: 0.8em;
+      font-size: 1em;
     }
 
     #list-image {
@@ -270,7 +270,7 @@ h4 {
     }
 
     #project-list {
-      font-size: 1rem;
+      font-size: 2rem;
       width: 80%;
       height: auto;
       padding: 1.5rem;
@@ -282,10 +282,10 @@ h4 {
     }
 
     p {
-    font-family: 'Papyrus', 'Cursive', sans-serif;
+    font-family: 'Papyrus', sans-serif;
     align-items: center;
     height: 10rem;
-    font-size: 1rem;
+    font-size: 2rem;
     padding: 4rem;
 }
   }
@@ -303,15 +303,15 @@ h4 {
     }
 
     h1 {
-      font-size: 2.5em;
+      font-size: 3em;
     }
 
     h2 {
-      font-size: 1em;
+      font-size: 2.2em;
     }
 
     h4 {
-      font-size: 0.8em;
+      font-size: 1em;
       margin-bottom: 0;
       line-height: 1.1;
     }
@@ -323,7 +323,7 @@ h4 {
 
     table {
       width: 100%;
-      font-size: 0.8em;
+      font-size: 1em;
     }
 
     #list-image {
@@ -342,7 +342,7 @@ h4 {
     }
 
     #project-list {
-      font-size: 1rem;
+      font-size: 2rem;
       width: 80%;
       height: auto;
       padding: 1.5rem;
@@ -359,8 +359,8 @@ h4 {
     background-color: hsla(170, 99%, 33%);
     height: 8rem;
     color: white;
-    font-size: 1rem;
-    font-family: 'Papyrus', 'Cursive', sans-serif;
+    font-size: 2rem;
+    font-family: 'Papyrus', sans-serif;
     padding: 2rem;
 }
   }
