--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -385,6 +385,12 @@ h4 {
       font-size: 1.5em;
     }
 
+    h4 {
+      font-size: 1em;
+      margin-bottom: 0;
+      line-height: 1.1;
+    }
+
     .circle-image {
       width: 140px;
       height: 140px;
@@ -392,24 +398,26 @@ h4 {
 
     table {
       width: 100%;
-      font-size: 0.8em;
+      font-size: 1em;
     }
 
     #list-image {
       display: flex;
       justify-content: flex-start;
       width: auto;
-      height: 40%;
+      height: 50%;
+      margin-top: 0;
+      padding-left: 1.2rem;
     }
 
     #side-image {
-      width: 40%;
-      height: auto;
-      margin-top: 10px;
+      max-width: 100%;
+      display: block;
+      margin: 0 0 0.2rem 0;
     }
 
     #project-list {
-      font-size: 1rem;
+      font-size: 2rem;
       width: 80%;
       height: auto;
       padding: 1.5rem;
@@ -417,6 +425,7 @@ h4 {
 
     form {
       width: 40%;
+      margin-top: 0;
     }
 
     p {
@@ -426,8 +435,8 @@ h4 {
     background-color: hsla(170, 99%, 33%);
     height: 4rem;
     color: white;
-    font-size: 1rem;
-    font-family: 'Papyrus', 'Cursive', sans-serif;
+    font-size: 2rem;
+    font-family: 'Papyrus', sans-serif;
     padding: 2rem;
 }
   }
