--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -381,18 +381,18 @@ h4 {
     }
 
     h2 {
-      font-size: 4em;
+      font-size: 3em;
     }
 
     h4 {
-      font-size: 3em;
+      font-size: 2em;
       margin-bottom: 0;
       line-height: 1;
     }
 
     .circle-image {
-      width: 200px;
-      height: 200px;
+      width: 250px;
+      height: 250px;
     }
 
     table {
@@ -401,7 +401,8 @@ h4 {
     }
 
     #list-image {
-      
+      display: block;
+      justify-content: flex-start;
       width: auto;
       height: 50%;
       margin-top: 0;
@@ -409,14 +410,14 @@ h4 {
     }
 
     #side-image {
-      width: 100%;
+      width: 50%;
       height: auto;
       display: block;
       margin: 0 0 0.2rem 0;
     }
 
     #project-list {
-      font-size: 2rem;
+      font-size: 2em;
       width: 80%;
       height: auto;
       padding: 1.5rem;
@@ -435,7 +436,7 @@ h4 {
     background-color: hsla(170, 99%, 33%);
     height: 10rem;
     color: white;
-    font-size: 2rem;
+    font-size: 2em;
     font-family: 'Papyrus', sans-serif;
     padding: 6rem;
 }
