--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -245,8 +245,8 @@ h4 {
   }
 
     .circle-image {
-      width: 200px;
-      height: 200px;
+      width: 120px;
+      height: 120px;
     }
 
     table {
@@ -387,7 +387,7 @@ h4 {
     h4 {
       font-size: 2em;
       margin-bottom: 0;
-      line-height: 1;
+      line-height: 1.1;
     }
 
     .circle-image {
@@ -412,21 +412,20 @@ h4 {
     #side-image {
       width: 50%;
       height: auto;
-      display: block;
-      margin: 0 0 0.2rem 0;
+      margin: 0 auto;
     }
 
     #project-list {
       font-size: 2em;
       width: 80%;
       height: auto;
-      padding: 1.5rem;
+      padding: 2rem;
     }
 
     form {
       width: 60%;
       height: auto;
-      margin-top: 0;
+      margin-top: 10px;
     }
 
     p {
@@ -434,7 +433,7 @@ h4 {
     justify-content: flex-start;
     align-items: center;
     background-color: hsla(170, 99%, 33%);
-    height: 10rem;
+    height: 15rem;
     color: white;
     font-size: 2em;
     font-family: 'Papyrus', sans-serif;
