--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -386,13 +386,13 @@ h4 {
 
     h4 {
       font-size: 2em;
-      margin-bottom: 0;
+      margin-bottom: 5px;
       line-height: 1.1;
     }
 
     .circle-image {
-      width: 250px;
-      height: 250px;
+      width: 300px;
+      height: 300px;
     }
 
     table {
@@ -410,16 +410,15 @@ h4 {
     }
 
     #side-image {
-      width: 50%;
+      width: 60%;
       height: auto;
       margin: 0 auto;
     }
 
     #project-list {
       font-size: 2em;
-      width: 80%;
-      height: auto;
-      padding: 2rem;
+      
+      padding: 2.5rem;
     }
 
     form {
@@ -437,7 +436,7 @@ h4 {
     color: white;
     font-size: 2em;
     font-family: 'Papyrus', sans-serif;
-    padding: 6rem;
+    padding: 10rem;
 }
   }
 
