--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -416,9 +416,10 @@ h4 {
     }
 
     #project-list {
+      display: block;
       font-size: 2em;
-      
-      padding: 2.5rem;
+      padding-left: 2.5rem;
+      padding: 2rem;
     }
 
     form {
@@ -433,11 +434,16 @@ h4 {
     align-items: center;
     background-color: hsla(170, 99%, 33%);
     height: 15rem;
+    width: auto;
     color: white;
     font-size: 2em;
     font-family: 'Papyrus', sans-serif;
     padding: 10rem;
 }
+
+  .secondary {
+    padding: 5rem;
+  }
   }
 
 
