font color change

--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -383,8 +383,13 @@ h4 {
     h2 {
       font-size: 3em;
       margin-bottom: 5px;
+      color: white;
     }
 
+    caption {
+      color: white;
+    }
+    
     h4 {
       font-size: 2em;
       margin-bottom: 5px;
