--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -382,7 +382,7 @@ h4 {
 
     h2 {
       font-size: 3em;
-      margin-bottom: 5px;
+      margin-bottom: 8px;
       color: white;
     }
 
@@ -409,21 +409,24 @@ h4 {
     #list-image {
       display: block;
       justify-content: flex-start;
+      position: relative;
+      left: 25%;
       width: auto;
       height: 50%;
       margin-top: 0;
-      padding-left: 1rem;
     }
 
     #side-image {
+      position: relative;
       width: 60%;
       height: auto;
     }
 
     #project-list {
       display: block;
+      justify-content: center;
       font-size: 2em;
-      padding: 10rem;
+      padding: 11rem;
       text-wrap: pretty;
       margin-bottom: 5px;
     }
@@ -445,11 +448,11 @@ h4 {
     font-size: 2em;
     font-family: 'Papyrus', sans-serif;
     text-wrap-style: auto;
-    padding: 10rem;
+    padding: 10% 0;
 }
 
   .secondary {
-    padding: 2rem;
+    padding: 1rem 0;
   }
   }
 
