--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -3,13 +3,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 2;
+    position: relative;
   }
 
 body {
   position: relative; /* Establish a positioning context for the ::before pseudo-element */
-  background-color: hsla(170, 99%, 33%);
+  background-color: rgb(15, 84, 111);
   font-size: 1.2em;
-  z-index: 1;
 }
 
 html, body {
@@ -18,41 +19,39 @@ html, body {
   padding: 20px;
 }
 
-  body::before {
-    content: "";
-    position: fixed; /* Fixed position to cover the entire viewport */
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url(Cameras.JPG); /* Background image */
-    background-position: center; /* Center the image */
-    background-size: auto 100%; /* Cover the entire area */
-    background-repeat: no-repeat; /* Prevent image repetition */
-    opacity: 0.7; /* Adjust opacity for transparency */
-    background-color: hsla(170, 99%, 33%);
-    z-index: -1; /* Ensure the background is behind other content */
-  }
+#bg-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
 
  .circle-image {
-  margin-top: -5px;
     border-radius: 50%;
     border: 0;
     object-fit: cover; /*Keeps image from stretching*/
     width: 160px;
     height: 160px;
+    z-index: 3;
+    position: relative;
+    display: block;
  }
 
   .header-text {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    position: relative;
+    z-index: 2;
   }
 
 table {
     border: 3px solid rgb(3, 3, 3);
     border-collapse: collapse;
-    background-color: hsla(170, 99%, 33%, 0.9); /* Semi-transparent background */
+    background-color: hsla(200, 84%, 20%, 0.9); /* Semi-transparent background */
     width: 50%;
     color: rgb(250, 247, 247); /* black text color */
     font-family: 'Papyrus', sans-serif;
@@ -85,7 +84,7 @@ caption {
     font-family: 'Brush Script MT', sans-serif; 
     text-align: center;
     text-shadow: 2px 2px 5px rgb(231, 229, 229);
-    background-color: hsla(170, 99%, 33%, 0.8);
+    background-color: hsla(201, 64%, 14%, 0.8);
     color: rgb(4, 3, 3);
     margin: 20px;
   }
@@ -104,7 +103,7 @@ p {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    background-color: hsla(170, 99%, 33%);
+    background-color: hsla(201, 64%, 14%);
     height: 5rem;
     color: white;
     font-size: 1em;
@@ -127,7 +126,7 @@ p {
   }
 
   #project-list {
-    background-color: hsla(170, 99%, 33%, 1.0);
+    background-color: hsla(201, 64%, 14%, 1.0);
     width: 75%;
     height: 160px;
     display: flex;
@@ -153,7 +152,7 @@ h4 {
   form {
     position: relative;
     margin-top: 5px;
-    background-color: hsla(170, 99%, 33%, 0.8); /* Semi-transparent background */
+    background-color: hsla(201, 64%, 14%, 0.8); /* Semi-transparent background */
     padding: 5px;
     border: 5px;
     border-radius: 2px;
@@ -423,7 +422,7 @@ h4 {
     #project-list {
       display: block;
       font-size: 2em;
-      padding: 11rem;
+      padding: 10% 2;
       text-wrap: pretty;
       margin-bottom: 5px;
     }
