--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -420,9 +420,10 @@ h4 {
     }
 
     #project-list {
-      display: block;
+      display: flex;
+      align-items: center;
       font-size: 2em;
-      padding: 10% 2;
+      padding: 40% 2;
       text-wrap: pretty;
       margin-bottom: 5px;
     }
@@ -437,7 +438,6 @@ h4 {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    background-color: hsla(170, 99%, 33%);
     height: 15rem;
     width: auto;
     color: white;
@@ -448,7 +448,7 @@ h4 {
 }
 
   .secondary {
-    padding: 1rem 0;
+    padding: 10% 2;
   }
   }
 
