--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -377,7 +377,6 @@ h4 {
 
     h1 {
       font-size: 4em;
-      left: 25%;
     }
 
     h2 {
@@ -411,8 +410,6 @@ h4 {
       display: block;
       justify-content: flex-start;
       position: relative;
-      left: 25%;
-      margin-top: 0;
     }
 
     #side-image {
@@ -425,10 +422,10 @@ h4 {
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      height: 15rem;
+      height: 3em;
       width: auto;
       font-size: 2em;
-      padding: 10% 2;
+      padding: 10% 0;
       text-wrap-style: auto;
       margin-bottom: 5px;
     }
@@ -456,6 +453,10 @@ h4 {
   .secondary {
     padding: 10% 2;
     left: 25%;
+  }
+
+  #bg-video {
+    object-fit: contain;
   }
   }
 
