--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -56,10 +56,12 @@ table {
     color: rgb(250, 247, 247); /* black text color */
     font-family: 'Papyrus', sans-serif;
     font-size: 1em;
+    margin: 0 auto;
   }
 
   th {
-    color: black;
+    color: rgb(255, 255, 255);
+    text-shadow: 1px 1px 2px red;
   }
 
   th, td {
@@ -74,6 +76,7 @@ caption {
     color: rgb(4, 4, 4);
     margin: 20px;
     font-weight: bold;
+    margin: 0 auto;
   }
 
 
