--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -423,13 +423,17 @@ h4 {
     }
 
     .project-list {
-      position: absolute;
+      background-color: hsla(201, 64%, 14%, 1.0);
+      width: 75%;
+      height: 160px;
       display: flex;
-      flex-direction: column;
       justify-content: center;
-      font-size: 2em;
-      text-wrap-style: auto;
-      margin-bottom: 10px;
+      align-items: left;
+      flex-direction: column;
+      font-family: 'Papyrus', sans-serif;
+      font-size: 1.2rem;
+      padding: 1.6rem;
+     
     }
 
     form {
