--- a/cv_exercise.css
+++ b/cv_exercise.css
@@ -423,16 +423,16 @@ h4 {
     }
 
     .project-list {
+      position: relative;
       background-color: hsla(201, 64%, 14%, 1.0);
       width: 75%;
       height: 160px;
       display: flex;
-      justify-content: center;
       align-items: left;
       flex-direction: column;
       font-family: 'Papyrus', sans-serif;
-      font-size: 1.2rem;
-      padding: 1.6rem;
+      font-size: 2em;
+      padding: 10% 0;
      
     }
 
